Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100670

QDockWidgetGroupWindow effectively sets new dockarea permissions on qdockwidget

    XMLWordPrintable

Details

    • All
    • dfe5f991207dcc74868d41feae5bc2bbad277808 7d85d7b01d (qt/qtbase/6.2) 7d85d7b01d (qt/tqtc-qtbase/6.2) 875e20c111 (qt/tqtc-qtbase/5.15)

    Description

      if we have two qdockwidget with all qdockwidget features set, and each qdockwidget has its own setAllowedAreas. If you undock one dockwidget and then undock another one. It loses its designated allowed area which was set in the beginning.

      Attached example can be used to reproduce, Screen recording shows steps how it can be seen.

       

      reproduction steps are also mentioned here:

      see here: https://forum.qt.io/topic/134181/qdockwidgetgroupwindow-effectively-sets-new-dockarea-permissions-on-qdockwidget

      Attachments

        1. err.mp4
          1.04 MB
        2. qtbug100670.zip
          5 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            axelspoerl Axel Spoerl
            espataky ed pataky
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0 minutes
                0m
                Logged:
                Time Spent - 4 days
                4d

                Gerrit Reviews

                  There are no open Gerrit changes